--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,8 @@ applications:
         build:
           commands:
             - yarn run build-openapi-docs
-            - yarn run build-javadoc
+            # - yarn run build-javadoc
+            - yarn run build-kdoc
             - yarn run build-clj-docs
             - yarn run build
       artifacts:
