--- a/cloud-benchmark/azure/kubernetes/multi-node-auctionmark.yaml
+++ b/cloud-benchmark/azure/kubernetes/multi-node-auctionmark.yaml
@@ -1,14 +1,53 @@
 apiVersion: "v1"
 kind: "PersistentVolumeClaim"
 metadata:
-  name: "xtdb-pvc-local-caches"
+  name: "xtdb-pvc-local-cache-lp"
   namespace: "cloud-benchmark"
 spec:
   accessModes:
     - "ReadWriteOnce"
   resources:
     requests:
-      storage: "50Gi"
+      storage: "10Gi"
+  storageClassName: "managed-csi"
+---
+apiVersion: "v1"
+kind: "PersistentVolumeClaim"
+metadata:
+  name: "xtdb-pvc-local-cache-node-1"
+  namespace: "cloud-benchmark"
+spec:
+  accessModes:
+    - "ReadWriteOnce"
+  resources:
+    requests:
+      storage: "10Gi"
+  storageClassName: "managed-csi"
+---
+apiVersion: "v1"
+kind: "PersistentVolumeClaim"
+metadata:
+  name: "xtdb-pvc-local-cache-node-2"
+  namespace: "cloud-benchmark"
+spec:
+  accessModes:
+    - "ReadWriteOnce"
+  resources:
+    requests:
+      storage: "10Gi"
+  storageClassName: "managed-csi"
+---
+apiVersion: "v1"
+kind: "PersistentVolumeClaim"
+metadata:
+  name: "xtdb-pvc-local-cache-node-3"
+  namespace: "cloud-benchmark"
+spec:
+  accessModes:
+    - "ReadWriteOnce"
+  resources:
+    requests:
+      storage: "10Gi"
   storageClassName: "managed-csi"
 ---
 apiVersion: "v1"
@@ -27,7 +66,7 @@ data:
   KAFKA_BOOTSTRAP_SERVERS: "kafka-service.cloud-benchmark.svc.cluster.local:9092"
   XTDB_TX_TOPIC: "xtdb-tx-topic"
   XTDB_FILES_TOPIC: "xtdb-files-topic"
-  AUCTIONMARK_DURATION: "PT1H"
+  AUCTIONMARK_DURATION: "PT24H"
   AUCTIONMARK_SCALE_FACTOR: "0.1"
 ---
 apiVersion: batch/v1
@@ -52,9 +91,18 @@ spec:
       serviceAccountName: "xtdb-service-account"
       restartPolicy: "Never"
       volumes:
-        - name: "xtdb-pvc-local-caches-vol"
+        - name: "xtdb-pvc-local-caches-lp-vol"
           persistentVolumeClaim:
-            claimName: "xtdb-pvc-local-caches"
+            claimName: "xtdb-pvc-local-cache-lp"
+        - name: "xtdb-pvc-local-caches-node-1-vol"
+          persistentVolumeClaim:
+            claimName: "xtdb-pvc-local-cache-node-1"
+        - name: "xtdb-pvc-local-caches-node-2-vol"
+          persistentVolumeClaim:
+            claimName: "xtdb-pvc-local-cache-node-2"
+        - name: "xtdb-pvc-local-caches-node-3-vol"
+          persistentVolumeClaim:
+            claimName: "xtdb-pvc-local-cache-node-3"
       initContainers:
       - name: wait-for-kafka
         image: busybox
@@ -68,7 +116,7 @@ spec:
         image: cloudbenchmarkregistry.azurecr.io/xtdb-azure-bench:latest
         volumeMounts:
         - mountPath: /var/lib/xtdb/buffers
-          name: xtdb-pvc-local-caches-vol
+          name: xtdb-pvc-local-caches-lp-vol
         resources:
           requests:
             memory: "5120Mi"
@@ -89,7 +137,7 @@ spec:
         image: cloudbenchmarkregistry.azurecr.io/xtdb-azure-bench:latest
         volumeMounts:
         - mountPath: /var/lib/xtdb/buffers
-          name: xtdb-pvc-local-caches-vol
+          name: xtdb-pvc-local-caches-node-1-vol
         resources:
           requests:
             memory: "5120Mi"
@@ -109,7 +157,7 @@ spec:
         image: cloudbenchmarkregistry.azurecr.io/xtdb-azure-bench:latest
         volumeMounts:
         - mountPath: /var/lib/xtdb/buffers
-          name: xtdb-pvc-local-caches-vol
+          name: xtdb-pvc-local-caches-node-2-vol
         resources:
           requests:
             memory: "5120Mi"
@@ -129,7 +177,7 @@ spec:
         image: cloudbenchmarkregistry.azurecr.io/xtdb-azure-bench:latest
         volumeMounts:
         - mountPath: /var/lib/xtdb/buffers
-          name: xtdb-pvc-local-caches-vol
+          name: xtdb-pvc-local-caches-node-3-vol
         resources:
           requests:
             memory: "5120Mi"
