--- a/cloud-benchmark/azure/kubernetes/multi-node-auctionmark.yaml
+++ b/cloud-benchmark/azure/kubernetes/multi-node-auctionmark.yaml
@@ -27,7 +27,7 @@ data:
   KAFKA_BOOTSTRAP_SERVERS: "kafka-service.cloud-benchmark.svc.cluster.local:9092"
   XTDB_TX_TOPIC: "xtdb-tx-topic"
   XTDB_FILES_TOPIC: "xtdb-files-topic"
-  AUCTIONMARK_DURATION: "PT1H"
+  AUCTIONMARK_DURATION: "PT24H"
   AUCTIONMARK_SCALE_FACTOR: "0.1"
 ---
 apiVersion: batch/v1
@@ -105,6 +105,11 @@ spec:
           value: "False"
         - name: XTDB_NODE_ID
           value: "bench-node-1"
+        - name: YOURKIT_PORT
+          value: "10001"
+        ports: 
+        - containerPort: 10001
+          hostPort: 10001
       - name: xtdb-azure-bench-2
         image: cloudbenchmarkregistry.azurecr.io/xtdb-azure-bench:latest
         volumeMounts:
@@ -125,6 +130,11 @@ spec:
           value: "False"
         - name: XTDB_NODE_ID
           value: "bench-node-2"
+        - name: YOURKIT_PORT
+          value: "10002"
+        ports: 
+        - containerPort: 10002
+          hostPort: 10002
       - name: xtdb-azure-bench-3
         image: cloudbenchmarkregistry.azurecr.io/xtdb-azure-bench:latest
         volumeMounts:
@@ -145,3 +155,8 @@ spec:
           value: "False"
         - name: XTDB_NODE_ID
           value: "bench-node-3"
+        - name: YOURKIT_PORT
+          value: "10003"
+        ports: 
+        - containerPort: 10003
+          hostPort: 10003
